--- a/service-config/src/main/resources/application.yaml
+++ b/service-config/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     config:
       server:
         git:
-          default-label: config-server
+          default-label: main
           uri: https://github.com/Daniel-LA0303/mcsv_app7_shop
           search-paths: config-data
   application:
