--- a/service-user/pom.xml
+++ b/service-user/pom.xml
@@ -84,6 +84,16 @@
 		    <artifactId>spring-aop</artifactId>
 		    <version>6.0.23</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-sleuth</artifactId>
+		    <version>3.1.11</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		    <version>3.1.11</version>
+		</dependency>
 	</dependencies>
 	  <dependencyManagement>
 	    <dependencies>
