--- a/config-data/service-car.yaml
+++ b/config-data/service-car.yaml
@@ -10,4 +10,14 @@ eureka:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 spring:
   application:
-    zipkin: http://localhost:9411
+    name: service-car
+  zipkin:
+    base-url: http://localhost:9411
+management:
+  tracing:
+    enabled: true
+logging:
+  level:
+    io.micrometer.tracing: DEBUG
+    brave: DEBUG
+    org.springframework.web: DEBUG
