--- a/config-data/service-bike.yaml
+++ b/config-data/service-bike.yaml
@@ -10,14 +10,8 @@ eureka:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 spring:
   application:
-    name: service-bike
-  zipkin:
-    base-url: http://localhost:9411
+    zipkin: http://localhost:9411
 management:
   tracing:
-    enabled: true
-logging:
-  level:
-    io.micrometer.tracing: DEBUG
-    brave: DEBUG
-    org.springframework.web: DEBUG
+    sampling:
+      probability: 1.0
