--- a/config-data/service-user.yaml
+++ b/config-data/service-user.yaml
@@ -40,14 +40,8 @@ resilience4j.circuitbreaker:
             eventConsumerBufferSize: 10
 spring:
   application:
-    name: service-user
-  zipkin:
-    base-url: http://localhost:9411
+    zipkin: http://localhost:9411
 management:
   tracing:
-    enabled: true
-logging:
-  level:
-    io.micrometer.tracing: DEBUG
-    brave: DEBUG
-    org.springframework.web: DEBUG
+    sampling:
+      probability: 1.0
