--- a/service-user/pom.xml
+++ b/service-user/pom.xml
@@ -84,6 +84,12 @@
 		    <artifactId>spring-aop</artifactId>
 		    <version>6.0.23</version>
 		</dependency>
+		
+		<dependency>
+	        <groupId>io.micrometer</groupId>
+	        <artifactId>micrometer-observation</artifactId>
+	    </dependency>
+		
 		<dependency>
 	        <groupId>io.micrometer</groupId>
 	        <artifactId>micrometer-tracing-bridge-brave</artifactId>
