--- a/service-bike/pom.xml
+++ b/service-bike/pom.xml
@@ -5,7 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.8</version>
+		<version>2.7.14</version>
+		<!-- <version>3.2.8</version> -->
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.mx.mcsv.service-bike</groupId>
@@ -28,7 +29,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
-		<spring-cloud.version>2023.0.3</spring-cloud.version>
+		<spring-cloud.version>2021.0.5</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -68,7 +69,7 @@
       		<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     	</dependency>
     	
-    	<dependency>
+    	<!--<dependency>
 	        <groupId>io.micrometer</groupId>
 	        <artifactId>micrometer-observation</artifactId>
 	    </dependency>
@@ -84,7 +85,16 @@
 	    <dependency>
 	        <groupId>org.springframework.boot</groupId>
 	        <artifactId>spring-boot-starter-actuator</artifactId>
-	    </dependency>
+	    </dependency>-->
+	    
+	    <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<dependencyManagement>
