--- a/service-car/pom.xml
+++ b/service-car/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.8</version>
+		<version>2.7.14</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.mx.mcsv.service-car</groupId>
@@ -28,7 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
-		<spring-cloud.version>2023.0.3</spring-cloud.version>
+		<spring-cloud.version>2021.0.5</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -69,6 +69,7 @@
 	      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 	    </dependency>
 	    
+	    <!--
 	    <dependency>
 	        <groupId>io.micrometer</groupId>
 	        <artifactId>micrometer-observation</artifactId>
@@ -77,18 +78,17 @@
 	        <groupId>io.micrometer</groupId>
 	        <artifactId>micrometer-tracing-bridge-brave</artifactId>
 	    </dependency>
-	    
-	    <!-- Zipkin reporter para Brave, que permite enviar las trazas a Zipkin -->
+
 	    <dependency>
 	        <groupId>io.zipkin.reporter2</groupId>
 	        <artifactId>zipkin-reporter-brave</artifactId>
 	    </dependency>
 	    
-	    <!-- Actuator para endpoints de monitoreo -->
+
 	    <dependency>
 	        <groupId>org.springframework.boot</groupId>
-	        <artifactId>spring-boot-starter-actuator</artifactId>
-	    </dependency>
+	        <artifactId>spring-boot-starter-actuator</artifactId> 
+	    </dependency> -->
 	</dependencies>
 	
 	<dependencyManagement>
