--- a/config-data/service-user.yaml
+++ b/config-data/service-user.yaml
@@ -39,5 +39,8 @@ resilience4j.circuitbreaker:
             failureRateThreshold: 50
             eventConsumerBufferSize: 10
 spring:
-  application:
-    zipkin: http://localhost:9411
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
