--- a/config-data/service-car.yaml
+++ b/config-data/service-car.yaml
@@ -9,5 +9,8 @@ eureka:
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 spring:
-  application:
-    zipkin: http://localhost:9411
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
