--- a/config-data/service-gateway.yaml
+++ b/config-data/service-gateway.yaml
@@ -29,3 +29,8 @@ spring:
           uri: lb://service-bike
           predicates:
             - Path=/bike/**
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
