--- a/config-data/service-gateway.yaml
+++ b/config-data/service-gateway.yaml
@@ -29,6 +29,10 @@ spring:
           uri: lb://service-bike
           predicates:
             - Path=/bike/**
+        - id: service-auth
+          uri: lb://service-auth
+          predicates:
+            - Path=/auth/**
   zipkin:
     base-url: http://localhost:9411
   sleuth:
